# syshealth

./: Cargo.toml  README.md  docker-compose.yml  pyproject.toml
.cargo/: audit.toml
.github/workflows/: workflow.yml
python/: __init__.py
python/pymonitor/: cli.py  monitor.py
python/pymonitor/_rust_monitor/: __init__.pyi
python/syshealth/: __init__.py  cli.py  monitor.py
python/syshealth/_rust_monitor/: __init__.pyi
resources/: grafana-dashboard.json
scripts/linux/: pymonitor.service  service_runner.py  syshealth.service
scripts/windows/: pymonitor_windows_service.py  syshealth_windows_service.py
src/: lib.rs
src/exporter/: mod.rs  mqtt.rs  victoria_metrics.rs
tests/: conftest.py  test_cli.py  test_monitor.py
