[package]
name = "syshealth"
version = "0.0.1"
edition = "2024"

[lib]
name = "_rust_monitor"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3-stub-gen = "0.21.0"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
sysinfo = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24.0"
ureq = "3.2.0"
thread-priority = "1.1.0"
