[build-system]
requires = ["maturin>=1.12.6, <2.0"]
build-backend = "maturin"

[project]
name = "pymonitor"
version = "0.0.1"
description = "A lightweight computer constants monitor using Rust and Python"
readme = "README.md"
authors = [
    { name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Operating System",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "pygments>=2.20.0"
]

[project.scripts]
pymonitor = "pymonitor.cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pymonitor._rust_monitor"

[dependency-groups]
mqtt = ["paho-mqtt>=2.1.0"]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "paho-mqtt>=2.1.0",
]

[tool.ruff.lint]
select = ["E", "F", "S", "D", "I", "RUF"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "D100",
]

[tool.pytest.ini_options]
addopts = "--cov=pymonitor --cov-report term:skip-covered --cov-report html:htmlcov --cov-report xml:coverage.xml"
testpaths = ["tests"]
