[build-system]
requires = ["maturin>=1.12.6, <2.0"]
build-backend = "maturin"

[project]
name = "syshealth"
version = "0.0.1"
description = "A lightweight computer constants monitor using Rust and Python"
readme = "README.md"
authors = [
    { name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Operating System",
]
requires-python = ">=3.12"
dependencies = [
    "typer==0.25.1",
    "rich==15.0.0",
    "pygments>=2.20.0",
]

[project.scripts]
syshealth = "syshealth.cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "syshealth._rust_monitor"

[dependency-groups]
mqtt = ["paho-mqtt>=2.1.0"]
windows-service = ["pywin32>=311; sys_platform == 'win32'"]
dev = [
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "paho-mqtt>=2.1.0",
]

[tool.ruff.lint]
select = ["E", "F", "S", "D", "I", "RUF"]

[tool.ruff]
line-length = 120
exclude = ["tests", "**/*.pyi"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "D100",
]

[tool.pytest.ini_options]
addopts = "--cov=syshealth --cov-report term:skip-covered --cov-report html:htmlcov --cov-report xml:coverage.xml"
testpaths = ["tests"]

[tool.ty.src]
exclude = ["tests", "**/*.pyi"]
